<resources>
    <string name="app_name">EPoints</string>
    <string name="text_email">Create an account with email</string>
    <string name="text_password">Set up password</string>
    <string name="text_password_signin">Enter password</string>
    <string name="text_firstName">First name</string>
    <string name="text_lastName">Last name</string>
    <string name="text_promoCode">Promo code</string>
    <string name="text_show">Show</string>
    <string name="text_createNewAccount">Create new account</string>
    <string name="text_privacy">By creating an account you agree to our Privacy Policy and confirm that you read our terms and conditions</string>
    <string name="text_createAccount">Create account</string>
    <string name="text_next">Next</string>
    <string name="text_bycreatingaccount">By creating an account you agree to our</string>
    <string name="text_privacypolicy"> Privacy Policy </string>
    <string name="text_and">and</string>
    <string name="text_confirm">confirm that you have read our</string>
    <string name="text_termsandconditions">terms and conditions</string>
    <string name="text_signup">Sign in</string>
    <string name="text_points">points</string>
    <string name="text_50epoints">Sign up today and have</string>
    <string name="text_50epoints1">50 epoints on us!</string>
    <string name="text_first_reward">You can get your first reward from as little \n as just 250 epoints.</string>
    <string name="text_250epoints">as just 250 epoints.</string>
    <string name="text_create_email">Create an account with email</string>
    <string name="text_account_facebook">Continue with Facebook</string>
    <string name="text_thankyou">Thank you</string>
    <string name="text_sent">We\'ve have sent you a</string>
    <string name="text_confirmation">confirmation email to</string>
    <string name="text_john">john.doe@example.mail</string>
    <string name="button_checkemail">Check email</string>
    <string name="text_youjustgot">you just got</string>
    <string name="text_thankyou_50epoints">50 epoints!</string>
    <string name="title_activity_thank_you">ThankYouActivity</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="text_signIn">Sign in</string>

    <string name="resend_link">Resend verification link</string>
    <string name="text_email_error">Invalid email address(abc@xyz.com)</string>
    <string name="text_password_error">Password must be between 6-15 characters</string>
    <string name="text_firstName_error">Please enter firstname</string>
    <string name="text_lastName_error">Please enter lastname</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_usedEmail">Email is already in use</string>

    <string name="account_verfied">This account is not verified</string>
    <string name="text_privacy1"><![CDATA[ By creating an account you agree to our <b><font color=#00D264>Privacy Policy</b>]]></string>
    <string name="text_toc"><![CDATA[ and confirm that you read our <b><font color=#00D264> terms and conditions </b>]]></string>
    <string name="text_privacy2">By creating an account you agree to our Privacy Policy</string>
    <string name="text_toc1">and confirm that you read our terms and conditions</string>
    <string name="text_coming_soon">Coming soon</string>
    <string name="text_enter_email">Enter email</string>
    <string name="text_signin_password">Enter password</string>
    <string name="text_signin_show">show</string>
    <string name="text_signin">Sign in</string>
    <string name="text_forget_password">Forgot your password?</string>
    <string name="text_error_email_password">Your email or password is wrong</string>
    <string name="facebook_app_id">722083627987716</string>
    <string name="fb_login_protocol_scheme">fb722083627987716</string>
    <string name="text_hide">Hide</string>
    <string name="text_email_empty">You haven’t entered a email</string>
    <string name="text_password_empty">You haven’t entered a password</string>




    <!--change Password-->

    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="create_new_password">Create new password</string>
    <string name="text_description_for_cpassword">Your employer has created a default password for you.
         Choose a memorable  password of you choice now to secure your account.</string>


</resources>
