<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/layout_margin">
            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="36dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/text_email"
                android:paddingLeft="@dimen/hint_padding"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/layout_margin"
                android:background="@drawable/rounded_edittext">

                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_height"
                    android:ems="10"
                    android:inputType="textPassword"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="119dp"
                    android:hint="@string/text_password"
                    android:paddingLeft="@dimen/hint_padding"
                    android:layout_weight="0.2"
                    android:background="@android:color/transparent"/>
                <TextView
                    android:id="@+id/textView_show"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_show"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:textColor="@color/colorCyan"/>
            </LinearLayout>

            <EditText
                android:id="@+id/editText_firstName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:ems="10"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="119dp"
                android:background="@drawable/rounded_edittext"
                android:layout_marginTop="@dimen/layout_margin"
                android:hint="@string/text_firstName"
                android:paddingLeft="@dimen/hint_padding"/>
            <EditText
                android:id="@+id/editText_lastName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:ems="10"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="119dp"
                android:background="@drawable/rounded_edittext"
                android:layout_marginTop="@dimen/layout_margin"
                android:hint="@string/text_lastName"
                android:paddingLeft="@dimen/hint_padding"/>
            <EditText
                android:id="@+id/editText_promoCode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:ems="10"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="119dp"
                android:background="@drawable/rounded_edittext"
                android:layout_marginTop="@dimen/layout_margin"
                android:hint="@string/text_promoCode"
                android:paddingLeft="@dimen/hint_padding"
                android:paddingRight="@dimen/hint_padding"
                android:drawableRight="@drawable/ic_action_error"/>

            <Button
                android:id="@+id/button_createNewAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_createNewAccount"
                android:textColor="@color/cardview_light_background"
                android:layout_marginTop="@dimen/layout_margin"
                android:background="@drawable/rounded_button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_alreadyHaveAccount"
                android:gravity="center"
                android:layout_marginTop="@dimen/layout_margin"/>
        </LinearLayout>

</LinearLayout>