<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin_XL"
        android:background="@drawable/spark"
        android:gravity="center">

        <TextView
            android:id="@+id/textview_thankyou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_thankyou"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin_XL"
            android:layout_marginBottom="@dimen/layout_margin_XL"
            android:layout_marginLeft="@dimen/layout_margin_XL"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/textsize_XL"
            android:fontFamily="@font/good_karma_regular"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hint_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_sent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_sent"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/textsize_M"
            android:fontFamily="@font/system_san_francisco_display_regular"/>

        <TextView
            android:id="@+id/textview_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_confirmation"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/textsize_M"
            android:fontFamily="@font/system_san_francisco_display_regular"/>

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/textsize_M"
            android:fontFamily="@font/system_san_francisco_display_regular"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_check_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/textsize"
        android:layout_marginRight="@dimen/textsize"
        android:layout_marginTop="@dimen/textsize_L"
        android:background="@drawable/rectangle_button"
        android:padding="@dimen/textsizeS"
        android:textAllCaps="false"
        android:text="@string/button_checkemail"
        android:textColor="@color/colorwhite"
        android:textSize="@dimen/textsize" />

    <TextView
        android:id="@+id/textview_justgo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/hint_padding_L"
        android:text="@string/text_youjustgot"
        android:textColor="@color/colorwhite"
        android:fontFamily="@font/system_san_francisco_display_regular"
        android:textSize="@dimen/textsize_M" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageview_epoints"
            android:layout_width="@dimen/layout_height"
            android:layout_height="@dimen/layout_height"
            android:src="@drawable/epoints" />

        <TextView
            android:id="@+id/textview_thankyou_50epoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/hint_padding"
            android:text="@string/text_thankyou_50epoints"
            android:fontFamily="@font/good_karma_regular"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/textsize_XL" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageview_snake"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:src="@drawable/snake"
        />
</LinearLayout>
