<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:gravity="center"
            android:hint="@string/text_enter_email"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/editText_signin_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:background="@drawable/rounded_edittext"
                android:backgroundTint="@color/color"
                android:ems="10"
                android:fontFamily="@font/system_san_francisco_display_regular"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/hint_padding"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hint_padding"
            android:gravity="center"
            android:hint="@string/text_signin_password"
            app:counterTextAppearance="@style/AppTheme_Custom"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editText_signin_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:background="@drawable/rounded_edittext"
                android:backgroundTint="@color/color"
                android:ems="10"
                android:fontFamily="@font/system_san_francisco_display_regular"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/hint_padding"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textview_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hint_padding"
            android:background="@drawable/rectangle_button"
            android:gravity="center"
            android:padding="@dimen/hint_padding"
            android:text="@string/text_signIn"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/textsizeS" />

        <TextView
            android:id="@+id/textview_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textsizeS"
            android:gravity="center"
            android:text="@string/text_forget_password"
            android:textColor="@color/colorgreen"
            android:textSize="@dimen/textsizeS" />
    </LinearLayout>
</LinearLayout>