<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorgray"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hint_padding"
        android:text="@string/text_description_for_cpassword"
        android:textSize="@dimen/textsize_S"
        android:padding="@dimen/hint_padding"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:errorEnabled="false"
            app:hintEnabled="false"
            app:passwordToggleDrawable="@null"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editText_signin_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:background="@drawable/rounded_edittext"
                android:backgroundTint="@color/color"
                android:ems="10"
                android:fontFamily="@font/system_san_francisco_display_regular"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/hint_padding"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:counterTextAppearance="@style/AppTheme_Custom"
            app:errorEnabled="false"
            app:hintEnabled="false"
            app:passwordToggleDrawable="@null"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/hint_padding">

            <EditText
                android:id="@+id/editText_signin_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:layout_marginTop="@dimen/hint_padding"
                android:background="@drawable/rounded_edittext"
                android:backgroundTint="@color/color"
                android:ems="10"
                android:fontFamily="@font/system_san_francisco_display_regular"
                android:gravity="center_vertical"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/hint_padding"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/textview_signin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/hint_padding"
            android:background="@drawable/rectangle_button"
            android:gravity="center"
            android:padding="@dimen/hint_padding"
            android:text="@string/change_password"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/textsizeS" />


    </LinearLayout>
</LinearLayout>